// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdvancedSearchField component should render \`autocomplete\` field 1`] = `
Array [
  <select
    className="advanced-search__logic"
    onChange={[Function]}
  >
    <option
      value="AND"
    >
      AND
    </option>
    <option
      value="OR"
    >
      OR
    </option>
    <option
      value="NOT"
    >
      NOT
    </option>
  </select>,
  <div
    className="dropdown-container"
  >
    <button
      className="button dropdown"
      onClick={[Function]}
      type="button"
    >
      Select
    </button>
    <div
      className="dropdown-menu"
    >
      <div
        className="dropdown-container"
      >
        <form
          onSubmit={[Function]}
        >
          <input
            onChange={[Function]}
            onKeyDown={[Function]}
            placeholder="Search for field"
            type="text"
            value=""
          />
        </form>
        <div
          className="autocomplete-menu"
        >
          <div
            className="dropdown-menu__panel"
          />
        </div>
      </div>
      <div
        className="dropdown-menu__panel"
      >
        <ul
          className=""
        />
      </div>
    </div>
  </div>,
  <div
    className="advanced-search__inputs"
  >
    <label
      htmlFor="input_undefined"
    >
      Enzyme classification [EC]
      <div
        className="dropdown-container"
      >
        <form
          onSubmit={[Function]}
        >
          <input
            onChange={[Function]}
            onKeyDown={[Function]}
            placeholder=""
            type="text"
            value=""
          />
        </form>
        <div
          className="autocomplete-menu"
        >
          <div
            className="dropdown-menu__panel"
          />
        </div>
      </div>
    </label>
  </div>,
]
`;

exports[`AdvancedSearchField component should render \`date\` field 1`] = `
Array [
  <select
    className="advanced-search__logic"
    onChange={[Function]}
  >
    <option
      value="AND"
    >
      AND
    </option>
    <option
      value="OR"
    >
      OR
    </option>
    <option
      value="NOT"
    >
      NOT
    </option>
  </select>,
  <div
    className="dropdown-container"
  >
    <button
      className="button dropdown"
      onClick={[Function]}
      type="button"
    >
      Select
    </button>
    <div
      className="dropdown-menu"
    >
      <div
        className="dropdown-container"
      >
        <form
          onSubmit={[Function]}
        >
          <input
            onChange={[Function]}
            onKeyDown={[Function]}
            placeholder="Search for field"
            type="text"
            value=""
          />
        </form>
        <div
          className="autocomplete-menu"
        >
          <div
            className="dropdown-menu__panel"
          />
        </div>
      </div>
      <div
        className="dropdown-menu__panel"
      >
        <ul
          className=""
        />
      </div>
    </div>
  </div>,
  <div
    className="advanced-search__inputs"
  >
    <label
      htmlFor="from_input_created"
    >
      From
      <input
        id="from_input_created"
        onChange={[Function]}
        placeholder="0"
        type="date"
      />
    </label>
    <label
      htmlFor="to_input_created"
    >
      To
      <input
        id="to_input_created"
        onChange={[Function]}
        placeholder="100"
        type="date"
      />
    </label>
  </div>,
]
`;

exports[`AdvancedSearchField component should render \`enum\` field 1`] = `
Array [
  <select
    className="advanced-search__logic"
    onChange={[Function]}
  >
    <option
      value="AND"
    >
      AND
    </option>
    <option
      value="OR"
    >
      OR
    </option>
    <option
      value="NOT"
    >
      NOT
    </option>
  </select>,
  <div
    className="dropdown-container"
  >
    <button
      className="button dropdown"
      onClick={[Function]}
      type="button"
    >
      Select
    </button>
    <div
      className="dropdown-menu"
    >
      <div
        className="dropdown-container"
      >
        <form
          onSubmit={[Function]}
        >
          <input
            onChange={[Function]}
            onKeyDown={[Function]}
            placeholder="Search for field"
            type="text"
            value=""
          />
        </form>
        <div
          className="autocomplete-menu"
        >
          <div
            className="dropdown-menu__panel"
          />
        </div>
      </div>
      <div
        className="dropdown-menu__panel"
      >
        <ul
          className=""
        />
      </div>
    </div>
  </div>,
  <div
    className="advanced-search__inputs"
  >
    <label
      htmlFor="select_existence"
    >
      Protein Existence [PE]
      <select
        id="select_existence"
        onChange={[Function]}
      >
        <option
          value="1"
        >
          Evidence at protein level
        </option>
        <option
          value="2"
        >
          Evidence at transcript level
        </option>
      </select>
    </label>
  </div>,
]
`;

exports[`AdvancedSearchField component should render \`evidence\` field 1`] = `
Array [
  <select
    className="advanced-search__logic"
    onChange={[Function]}
  >
    <option
      value="AND"
    >
      AND
    </option>
    <option
      value="OR"
    >
      OR
    </option>
    <option
      value="NOT"
    >
      NOT
    </option>
  </select>,
  <div
    className="dropdown-container"
  >
    <button
      className="button dropdown"
      onClick={[Function]}
      type="button"
    >
      Select
    </button>
    <div
      className="dropdown-menu"
    >
      <div
        className="dropdown-container"
      >
        <form
          onSubmit={[Function]}
        >
          <input
            onChange={[Function]}
            onKeyDown={[Function]}
            placeholder="Search for field"
            type="text"
            value=""
          />
        </form>
        <div
          className="autocomplete-menu"
        >
          <div
            className="dropdown-menu__panel"
          />
        </div>
      </div>
      <div
        className="dropdown-menu__panel"
      >
        <ul
          className=""
        />
      </div>
    </div>
  </div>,
  <div
    className="advanced-search__inputs"
  >
    <label
      htmlFor="input_undefined"
    >
      ChEBI term
      <div
        className="dropdown-container"
      >
        <form
          onSubmit={[Function]}
        >
          <input
            onChange={[Function]}
            onKeyDown={[Function]}
            placeholder=""
            type="text"
            value=""
          />
        </form>
        <div
          className="autocomplete-menu"
        >
          <div
            className="dropdown-menu__panel"
          />
        </div>
      </div>
    </label>
  </div>,
  <div
    className="advanced-search__inputs"
  >
    <label
      htmlFor="evidence_select"
    >
      Evidence
      <select
        id="evidence_select"
        onChange={[Function]}
        value=""
      />
    </label>
  </div>,
]
`;

exports[`AdvancedSearchField component should render \`range\` field 1`] = `
Array [
  <select
    className="advanced-search__logic"
    onChange={[Function]}
  >
    <option
      value="AND"
    >
      AND
    </option>
    <option
      value="OR"
    >
      OR
    </option>
    <option
      value="NOT"
    >
      NOT
    </option>
  </select>,
  <div
    className="dropdown-container"
  >
    <button
      className="button dropdown"
      onClick={[Function]}
      type="button"
    >
      Select
    </button>
    <div
      className="dropdown-menu"
    >
      <div
        className="dropdown-container"
      >
        <form
          onSubmit={[Function]}
        >
          <input
            onChange={[Function]}
            onKeyDown={[Function]}
            placeholder="Search for field"
            type="text"
            value=""
          />
        </form>
        <div
          className="autocomplete-menu"
        >
          <div
            className="dropdown-menu__panel"
          />
        </div>
      </div>
      <div
        className="dropdown-menu__panel"
      >
        <ul
          className=""
        />
      </div>
    </div>
  </div>,
  <div
    className="advanced-search__inputs"
  >
    <label
      htmlFor="input_id_sites"
    >
      Any
      <input
        id="input_id_sites"
        onChange={[Function]}
        placeholder="translocation"
        type="text"
      />
    </label>
  </div>,
  <div
    className="advanced-search__inputs"
  >
    <label
      htmlFor="from_input_sites"
    >
      From
      <input
        id="from_input_sites"
        onChange={[Function]}
        placeholder="0"
        type="number"
      />
    </label>
    <label
      htmlFor="to_input_sites"
    >
      To
      <input
        id="to_input_sites"
        onChange={[Function]}
        placeholder="100"
        type="number"
      />
    </label>
  </div>,
]
`;

exports[`AdvancedSearchField component should render \`string\` field 1`] = `
Array [
  <select
    className="advanced-search__logic"
    onChange={[Function]}
  >
    <option
      value="AND"
    >
      AND
    </option>
    <option
      value="OR"
    >
      OR
    </option>
    <option
      value="NOT"
    >
      NOT
    </option>
  </select>,
  <div
    className="dropdown-container"
  >
    <button
      className="button dropdown"
      onClick={[Function]}
      type="button"
    >
      Select
    </button>
    <div
      className="dropdown-menu"
    >
      <div
        className="dropdown-container"
      >
        <form
          onSubmit={[Function]}
        >
          <input
            onChange={[Function]}
            onKeyDown={[Function]}
            placeholder="Search for field"
            type="text"
            value=""
          />
        </form>
        <div
          className="autocomplete-menu"
        >
          <div
            className="dropdown-menu__panel"
          />
        </div>
      </div>
      <div
        className="dropdown-menu__panel"
      >
        <ul
          className=""
        />
      </div>
    </div>
  </div>,
  <div
    className="advanced-search__inputs"
  >
    <label
      htmlFor="input_id_accession"
    >
      UniProtKB AC
      <input
        id="input_id_accession"
        onChange={[Function]}
        placeholder="P12345"
        type="text"
      />
    </label>
  </div>,
]
`;
